fixed mobile responsive overflow issue white space

--- a/style.css
+++ b/style.css
@@ -319,8 +319,8 @@ nav {
 }
 
 @media screen and (max-width: 480px) {
-  body {
-    width: 480px;
+  html, body {
+      overflow-x: hidden;
   }
 
   .menu-items {
@@ -370,6 +370,10 @@ nav {
     width: 100%;
     text-align: center;
     padding-bottom: 20px;
+  }
+
+  .featured-projects{
+    padding: 30px 30px;
   }
 
   .project-list {
